[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zbrains"
version = "2.0.0"
description = "Z-Brains: Neuroimaging processing and analysis pipeline"
readme = "README.md"
authors = [
    {name = "MICA Lab", email = "mica.mni@mcgill.ca"}
]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "brainspace",
    "xhtml2pdf",
    "cmocean",
    "segno",
    "pyvirtualdisplay; platform_system!='Windows'",
    "matplotlib",
    "pandas",
    "nibabel"
]

[project.urls]
"Homepage" = "https://github.com/MICA-MNI/z-brains"
"Documentation" = "https://z-brains.readthedocs.io"
"Bug Tracker" = "https://github.com/MICA-MNI/z-brains/issues"

[project.scripts]
zbrains = "zbrains.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["zbrains", "zbrains.sWM", "zbrains.data"]
include-package-data = true

[tool.setuptools.package-data]
zbrains = ["data/**/*"]